fix: align header content in larger window

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,17 @@ ul {
 }
 
 .header {
-  width: 100%;
+  width: 100vw;
   padding: 12px 70px;
+  display: flex;
+  justify-content: center;
 }
 .header__content {
   max-width: 1440px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 .header__brand__title {
   color: #2c3037;
