--- a/resources/sass/_header.sass
+++ b/resources/sass/_header.sass
@@ -1,11 +1,14 @@
 .header
-    width: 100%
+    width: 100vw
     padding: 12px 70px
+    display: flex
+    justify-content: center
     &__content
         max-width: 1440px
         display: flex
         align-items: center
         justify-content: space-between
+        width: 100%
     &__brand__title
         color: $cl-text-02
         font-size: 20px
